--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title><%= htmlWebpackPlugin.options.title %></title>
+        <link rel='stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500'>
         <style>
             * {
                 margin: 0;
@@ -11,7 +13,6 @@
                 -moz-osx-font-smoothing: grayscale;
             }
         </style>
-        <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
     <body>
         <div id='root'></div>
