--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
                 margin: 0;
                 padding: 0;
                 box-sizing: border-box;
-                font-family: Arial;
+                font-family: Roboto, Arial;
                 -webkit-font-smoothing: antialiased;
                 -moz-osx-font-smoothing: grayscale;
             }
