--- a/templates/index.html
+++ b/templates/index.html
@@ -2,15 +2,20 @@
 <html>
     <head>
         <title><%= htmlWebpackPlugin.options.title %></title>
-        <link rel='stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500'>
         <style>
+            @import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500);
+
             * {
                 margin: 0;
                 padding: 0;
                 box-sizing: border-box;
-                font-family: Roboto, Arial;
+                font-family: Roboto, sans-serif, Arial;
                 -webkit-font-smoothing: antialiased;
                 -moz-osx-font-smoothing: grayscale;
+            }
+
+            a {
+                text-decoration: none;
             }
         </style>
     </head>
